<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.penn.attemptone.LoginScreen"
    tools:showIn="@layout/activity_login_screen">

    <EditText
        android:id="@+id/employeeID_input"
        android:layout_width="251dp"
        android:layout_height="46dp"
        android:hint="@string/ls_username_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.502"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="251dp"
        android:layout_height="46dp"
        android:hint="@string/ls_password_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:layout_constraintHorizontal_bias="0.502"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="182dp" />

    <TextView
        android:layout_width="141dp"
        android:layout_height="19dp"
        android:text="@string/ls_welcome_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/ls_login_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.502"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/new_employee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:text="@string/ls_new_employee_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:layout_constraintHorizontal_bias="0.93" />

</android.support.constraint.ConstraintLayout>
